--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Dav0DC962CIZRFHJycUfmaW4kvpimH1s69fyDs/pIuU=
+APP_KEY=base64:ZLAzZOBgENSJf8aYK9xcKhwRk20KitIITpAs4LVqokU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=quiz
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=1234
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
