--- a/.env.example
+++ b/.env.example
@@ -31,8 +31,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=nidhipatel1632001@gmail.com
-MAIL_PASSWORD=elaunch@123
+MAIL_USERNAME=84782684da0f0f
+MAIL_PASSWORD=a2569e3a20709a
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=nidhipatel1632001@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
