--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=eLearning
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -29,8 +29,8 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
 MAIL_USERNAME=84782684da0f0f
 MAIL_PASSWORD=a2569e3a20709a
 MAIL_ENCRYPTION=tls
