--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "illuminate/support": "^8.75",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
